<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirType</string>
    <string name="setup_text">Welcome, please click the button to continue.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="one">q a z</string>
    <string name="two">w s x</string>
    <string name="three">e d c</string>
    <string name="four">r f v"\n"t g b</string>
    <string name="five">y h n"\n"u j m</string>
    <string name="six">i k ,</string>
    <string name="seven">o l .</string>
    <string name="eight">p</string>
    <string name="title_activity_air_type_init">AirTypeInitActivity</string>

    <string name="calibrate_intro">The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog The quick brown fox jumps over the lazy dog</string>
    <string name="title_activity_calibrate">CalibrateActivity</string>

</resources>
